--- a/TwitterSentimentAnalysis.ipynb
+++ b/TwitterSentimentAnalysis.ipynb
@@ -7,7 +7,7 @@
     "id": "aU22pivTeW22"
    },
    "source": [
-    "**TwitterSentimentAnalysis ~ Suraj And Tushar**"
+    "**TwitterSentimentAnalysis ~ sumit**"
    ]
   },
   {
